<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:paddingStart="29dp"
        android:paddingEnd="29dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Titulo principal -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PREGUNTAS FRECUENTES"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="16dp" />

        <!-- Secciones -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿QUÉ ES HANDYMATCH?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queeshandymatch"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿CÓMO ME REGISTRO EN LA APLICACIÓN?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comoregistrarme"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿ES GRATIS USAR HANDYMATCH?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esgratis"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿QUÉ TIPO DE SERVICIOS PUEDO SOLICITAR U OFRECER?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiposdeservicios"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿CÓMO SE REALIZA EL PAGO DE LOS SERVICIOS?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagos"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿HANDYMATCH VERIFICA A LOS PROVEEDORES?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verificacionproveedores"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿PUEDO CALIFICAR A UN PROVEEDOR O CLIENTE?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calificaciones"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿QUÉ HAGO SI TENGO UN PROBLEMA CON UN SERVICIO?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problemasconservicio"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿DÓNDE ESTÁ DISPONIBLE HANDYMATCH?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disponibilidad"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿PUEDO OFRECER MÁS DE UN TIPO DE SERVICIO?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variosservicios"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿PUEDO CANCELAR UN SERVICIO UNA VEZ SOLICITADO?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelarservicio"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿QUÉ PASA SI UN PROVEEDOR NO LLEGA A LA CITA?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proveedornollega"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿PUEDO REPROGRAMAR UNA CITA YA AGENDADA?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reprogramarcita"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿CÓMO ME ASEGURO DE QUE UN PROVEEDOR ES CONFIABLE?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confiabilidadproveedor"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿QUÉ DEBO HACER SI TENGO UNA MALA EXPERIENCIA?"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/malaexperiencia"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONTACTO"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\nPara cualquier duda, puede contactarnos a: "
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvCorreoSoporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\nsoporte.handymatch@gmail.com "
            android:textSize="14sp"
            android:textColor="@color/com_facebook_blue"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>
</ScrollView>
