<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- ImageButton de cerrar -->
        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackground"
            android:onClick="abrirMain"
            android:padding="8dp"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <!-- Título -->
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/md_theme_onBackground"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Descripción -->
        <TextView
            android:id="@+id/descrpicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textAlignment="center"
            android:textColor="@color/md_theme_onBackground"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Errores de Correo -->
        <TextView
            android:id="@+id/ErrCorreo"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/ErrorCorreo"
            android:textColor="@color/md_theme_error"
            android:textSize="13sp" />

        <!-- Input de Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/textodeguia"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/fondogris"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:gravity="left" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Error de Contraseña -->
        <TextView
            android:id="@+id/ErrContra"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/ErrorContraseña"
            android:textColor="@color/md_theme_error"
            android:textSize="13sp" />

        <!-- Input de Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña"
            android:textColorHint="@color/textodeguia"
            app:endIconMode="password_toggle"
            app:startIconCheckable="false"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@android:color/darker_gray"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/recuadro"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/btnLoginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fondosyletras"
                android:onClick="login"
                android:padding="12dp"
                android:text="Iniciar sesión"
                android:textAllCaps="false"
                android:textColor="#F7FAFA" />

            <ProgressBar
                android:id="@+id/loginProgressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:elevation="5dp"/>
        </RelativeLayout>



        <!-- Botón de Registro -->
        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#E0EBFF"
            android:onClick="abrirRegistro"
            android:padding="12dp"
            android:text="Registrarse"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descrpicion" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Texto Olvidé mi Contraseña -->
        <TextView
            android:id="@+id/textrEGISTRARSE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="abrirRetrieve"
            android:text="@string/olvidocontraseña"
            android:textColor="@color/md_theme_onBackground"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <!-- Íconos de redes sociales -->
        <LinearLayout
            android:id="@+id/socialLoginContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/descrpicion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/google_login"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_google" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
</ScrollView>
